Fixed heading no longer overlaps header when small height.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -172,11 +172,11 @@ body {
     width:100%;
     background: url('../img/Zodiakas.jpg') center center no-repeat;
     background-size: cover;
+    z-index: -1;
     .cover-text {
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 2;
         width: 100%;
         height: 100%;
     }
