--- a/src/video-background/video-background.scss
+++ b/src/video-background/video-background.scss
@@ -3,7 +3,7 @@
     top: 0;
     width: 300%;
     left: -100%; /* center */
-    z-index: 1;
+    z-index: -1;
     height: 100%;
     overflow: hidden;
 
